Mini fix: vertical align title

--- a/assets/css/tweak.sass
+++ b/assets/css/tweak.sass
@@ -114,6 +114,7 @@ section#header div.header
   span.right-side
     div.nav.wrap
       display: inline-block
+      vertical-align: middle
       a
         @include smart-light-theme
           color: var(--light-theme-color-glyph)
